# mediabox

./: .gitattributes  .gitignore  check-disk-status.sh  check-zfs-status.sh  checkDocker.sh  com.marc.checkdocker.plist  docker-compose.yml  find-non-hardlinked-files.sh  index.html  manage.sh  mediabox.sh  snapraid-sync.sh  transmission_pause.py
dedupe/: Cargo.toml
dedupe/src/: main.rs
